--- a/src/Presentation/Nop.Web/Areas/Admin/Views/Setting/_CustomerUser.Security.cshtml
+++ b/src/Presentation/Nop.Web/Areas/Admin/Views/Setting/_CustomerUser.Security.cshtml
@@ -110,5 +110,14 @@
                 <nop-editor asp-for="CustomerSettings.EnteringEmailTwice" />
                 <span asp-validation-for="CustomerSettings.EnteringEmailTwice"></span>
             </div>
-        </div>        
+        </div>
+        <div class="form-group row">
+            <div class="col-md-3">
+                <nop-label asp-for="CustomerSettings.ForceMultifactorAuthentication" />
+            </div>
+            <div class="col-md-9">
+                <nop-editor asp-for="CustomerSettings.ForceMultifactorAuthentication" />
+                <span asp-validation-for="CustomerSettings.ForceMultifactorAuthentication"></span>
+            </div>
+        </div>
     </div>
